# MCPedia

./: .gitignore  README.md  enchanting_data.json  fall_data.json  keep_alive.py  main.py  pyproject.toml
cogs/: brewing.py  calculate.py  crafting.py  enchants.py  help_command.py  help_command.txt  tools.py  villager.py  wiki.py
static/: style.css
templates/: home.html
